--- a/src/app/adminboard/prescription/prescription.component.html
+++ b/src/app/adminboard/prescription/prescription.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="d-flex row">
         <div class="logo p-3 col align-items-center">
-            <img class="" src="https://images2.imgbox.com/79/7a/3CWkEnHN_o.png" height="50">
+            <img class="" src="https://images2.imgbox.com/79/7a/3CWkEnHN_o.png" height="80">
         </div>
         <div class="d-flex justify-content-center info col">
             <div class="docInfo ms-5 me-5 pt-3">
@@ -41,6 +41,55 @@
             <div>
                 <h1 class="fw-semibold display-2">R<sub>x</sub></h1>
                     <hr>
+
+                    <table class="table">
+                        <thead >
+                            <th>Medicine Name</th>
+                            <th>Group Name</th>
+                            <th>Morning</th>
+                            <th>Noon</th>
+                            <th>Night</th>
+                            <th>Custom Time</th>
+                            <th>Eating Time</th>
+                            <th>Duration</th>
+                            <th>Duration</th>
+                        </thead>
+                    </table>
+
+                    <form method="POST">
+                        <div class="row">
+                          <div class="form-group col">
+
+                            <select name="" id="" class="form-control">
+                                <option value="">Omiprazole</option>
+                                <option value="">Omiprazole</option>
+                                <option value="">Omiprazole</option>
+                                <option value="">Omiprazole</option>
+
+                            </select>
+                            <!-- <input
+                              class="form-control"
+                              type="text"
+                              name=""
+                              id=""
+                              formControlName="first_name"
+                            /> -->
+                          </div>
+
+                          <div class="col align-items-center">
+                            <button
+                          type="submit"
+                          class="btn btn-outline-info float-right d-flex justify-content-center me-2"
+                          id="btnLogin"
+                         
+                        >
+                          Add Medicine
+                        </button>
+                          </div>
+                        </div>
+                      </form>
+
+
             </div>
         </div>
        
@@ -53,9 +102,4 @@
         </div>
        
     </div>
-
-
-
-
-
 </div>
