--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -82,7 +82,7 @@
             class="btn btn-primary btn-lg"
             style="padding-left: 2.5rem; padding-right: 2.5rem"
           >
-            Login
+            Login check
           </button>
           <p class="small fw-bold mt-2 pt-1 mb-0 lead">
             Don't have an account?
